--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <div id="menus">
         <ul>
-            <li><a href="index.html"style="color:  white; size: 7px;">Curriculum</a></li>
+            <li><a href="menu.html"style="color:  white; size: 7px;">Curriculum</a></li>
             <li><a href="hobbies.html"style="color: white; size: 7px;">Hobbies</a></li>
             <li><a href="#"style="color:white; size: 7px;">Animaciones</a></li>
             </ul>
-            <p>si</p>=
+        
     </div>    
 </body>
 </html>
