--- a/hobbies.html
+++ b/hobbies.html
@@ -12,13 +12,13 @@
     <div class="Micontenedor">
         <header>
             <div class="imagenderocket">
-            <img src="imagenes/logo.jpg" width="150" alt="">   
+            <img src="./imagenes/logo.jpg" width="150" alt="">   
                 <a href="#" style="color: rgb(233, 224, 224);">MI HOBBIE</a>
             </div>
             <nav>
-                <a href="menu.html" >Inicio</a>
-                <a href="index.html">Curriculum</a>
-                <a href="#">Madre</a>
+                <a href="index.html" >Inicio</a>
+                <a href="menu.html">Curriculum</a>
+                <a href="/formulario.html">Problemario</a>
                 </nav> 
         </header>
         <section class="Menu">
@@ -58,7 +58,7 @@
              </section>
              
            <div class="LosPrecios">
-                <a link href="menu.html">REGRESAR</a>
+                <a link href="index.html">REGRESAR</a> 
                
            </div>
          </footer>
