--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
            <b> <li><a href="menu.html"style="color:black; size: 70px;">Curriculum</a></li></b>
            <b><li><a href="hobbies.html"style="color: black; size: 7px;">Hobbies</a></li></b>
-            <b><li><a href="#"style="color:black; size: 7px;">Animaciones</a></li></b>
+            <b><li><a href="#"style="color:black; size: 7px;">Problemario</a></li></b>
             </ul>
     </div> 
     <div id="logo">
