--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,9 @@
     <h1>Curriculum</h1>
     </div>
     <p>4IV7</p>
-     <img class="imagenipn" style="width: 120px; height: 120px;" src="./imagenes/imagencss.PNG"/>
+     <img class="imagenipn"  src="./imagenes/imagencss.PNG">
 
-<img class="segundaimagen" style="width: 120px; height: 120px;"src="./imagenes/segundaimagen.PNG"/>
+<img class="segundaimagen" src="./imagenes/segundaimagen.png">
 </nav>
 
 <nav>
@@ -89,7 +89,8 @@
 
           <footer>
               <div class="ultimo">
-          <h4>PROGRAMACION Y SERVICIOS WEB</h4>
+          <h4><a link href="index.html">PROGRAMACION Y SERVICIOS WEB</h4>
+          
 
 </footer>
 </div>
