Se vera las imagenes?

--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,12 @@
     <h1>Curriculum</h1>
     </div>
     <p>4IV7</p>
-     <img class="imagenipn"  src="./imagenes/imagencss.PNG">
-
-<img class="segundaimagen" src="./imagenes/segundaimagen.png">
+    <div class="imagenipn"> 
+     <img src="./imagenes/imagencss.png">
+    </div>
+   <div class="segundaimagen">
+     <img src="./imagenes/segundaimagen.png">
+   </div>
 </nav>
 
 <nav>
