--- a/menu.html
+++ b/menu.html
@@ -18,8 +18,8 @@
     <div class="imagenipn"> 
      <img src="./imagenes/imagencss.png">
     </div>
-   <div class="segundaimagen2">
-     <img src="./imagenes/segundaimagen2.png">
+   <div class="segundaimagen">
+     <img src="./imagenes/segundaimagen.png">
    </div>
 </nav>
 
