--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
         <div class="noob"></div>
     <nav>
     <div class="curri">    
-    <h1>Curriculum</h1>
+    <a link href="index.html"><h1>Curriculum</h1></a>
     </div>
     <p>4IV7</p>
     <div class="imagenipn"> 
@@ -92,10 +92,8 @@
 
           <footer>
               <div class="ultimo">
-          <h4><a link href="index.html" style="color: black;">PROGRAMACION Y SERVICIOS WEB</h4>
-          
-
-</footer>
+             <h4><a link href="index.html" style="color: black;">PROGRAMACION Y SERVICIOS WEB</h4>
+           </footer>
 </div>
         
 </body>
