Problemas con estilos css

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <header class="bg-animate">
     <div id="menus">
         <ul>
-           <b> <li><a href="menu.html"style="color:black; size: 70px;">Curriculum</a></li></b>
-           <b><li><a href="hobbies.html"style="color: black; size: 7px;">Hobbies</a></li></b>
-            <b><li><a href="problema1.html"style="color:black; size: 7px;">Problemario</a></li></b>
+           <b> <li ><a href="menu.html"style="color:black; size: 70px;">Curriculum</a></li></b>
+           <b><li  ><a href="hobbies.html"style="color: black; size: 7px;">Hobbies</a></li></b>
+            <b><li><a href="problema1.html"style="color:black; size: 7px;">Problemario</a>  
+            </ul>
+            </li></b>
             </ul>
     </div> 
     <div id="logo">
@@ -34,13 +36,17 @@
        </div>
    </section>
            <div class="burbujas">
-              <div class="burbuja"></div>
-              <div class="burbuja"></div>
-              <div class="burbuja"></div>
-              <div class="burbuja"></div>
-              <div class="burbuja"></div>
-              <div class="burbuja"></div>
-              <div class="burbuja"></div>
+              <i><div class="burbuja" ><a href="./problema1.html" style="color: rgb(2, 2, 2);">Problema 1</div></i></a>
+              <div class="burbuja"><a href="problema02.html" style="color: black;">Problema 2</a></div>
+              <div class="burbuja"><a href="problema03.html" style="color: black;">Problema 3</a></div>
+              <div class="burbuja"><a href="problema04.html" style="color: black;">Problema 4</a></div></div>
+              <div class="burbuja"><a href="problema05.html" style="color: black;">Problema 5</a></div></div>
+              <div class="burbuja"><a href="problema06.html" style="color: black;">Problema 6</a></div></div>
+              <div class="burbuja"><a href="problema07.html" style="color: black;">Problema 7</a></div></div>
+              <div class="burbuja"><a href="problema08.html" style="color: black;">Problema 8</a></div></div>
+              <div class="burbuja"><a href="problema09.html" style="color: black;">Problema 9</a></div></div>
+              <div class="burbuja"><a href="problema010.html" style="color: black;">Problema 10</a></div></div>
+              </a>
 
             </div>
    </header>
