--- a/problema04.html
+++ b/problema04.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/problema04.css">
 </head>
-<body>
-
-    <a href="problema05.html">Problema 5</a>
+<body style="color: white;">
+    <div class="botones" style="color: rgb(42, 60, 94);">
+        <div>
+       <button class="btn btn--1">
+            <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+        </button>
+       <br>
+       <br>
+       <button class="btn btn--2">
+           <a href="problema05.html" style="text-decoration: none; color: rgb(255, 255, 255);">Problema 5</a>
+        </button>
+        </div>
+    </div>
 </body>
 </html>
