--- a/problema05.html
+++ b/problema05.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
     src="./js/problema05.js"></script>
+    <link rel="stylesheet" href="./css/problema05.css">
 </head>
-<body>
+<body style="color: white;">
     <p>
         Un maestro desea saber que porcentaje de hombre y que porcentaje de mujeres
         hay en un grupo de estudiantes
@@ -48,12 +49,17 @@
                 <td class="td_down"> <input type="button" name="borrard" 
                     value="Borrar" onclick="borrar()"> </td>
             </tr>
-            <br>
-            <a href="index.html">Regresar al Formulario Principal </a>
-            <br>
-            <br>    
-            <br>
-            <a href="problema06.html">Problema 6</a>
+            <div>
+                <button class="btn btn--1">
+                     <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+                 </button>
+                <br>
+                <br>
+                <button class="btn btn--2">
+                    <a href="./problema06.html" style="text-decoration: none; color: rgb(255, 255, 255);">Problema 6</a>
+                 </button>
+                 </div>
+             </div>
     
 </body>
 </html>
