--- a/problema06.html
+++ b/problema06.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
     src="./js/problema06.js"></script>
+    <link rel="stylesheet" href="./css/problema06.css">
 </head>
-<body>
+<body style="color: white;">
     <p>
         Realizar un algoritmio que calcule la edad de una persona:)
     </p>
@@ -31,10 +32,16 @@
                     class="input_text"> </td>
             </tr>
             <br>
-    <a href="index.html">Regresar al Menu Principal </a>
-    <br>
-    <br>
-    <a href="problema07.html">Problema 7</a>
-    
+            <div>
+                <button class="btn btn--1">
+                     <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+                 </button>
+                <br>
+                <br>
+                <button class="btn btn--2">
+                    <a href="./problema07.html" style="text-decoration: none; color: rgb(255, 255, 255);">Problema 7</a>
+                 </button>
+                 </div>
+             </div>
 </body>
 </html>
