--- a/problema07.html
+++ b/problema07.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
     src="./js/problema07.js"></script>
+    <link rel="stylesheet" href="./css/problema07.css">
 </head>
-<body>
+<body style="color: white;">
     <p>
         Leer 2 numeros ; si son iguales que los multiplique si el primero 
         es mayor que el segundo que los reste y si no que los sume
@@ -49,10 +50,18 @@
                             id="si" readonly="readonly" 
                             class="input_text"> </td>
                     </tr>
-                    <a href="index.html">Regresar al Menu Principal </a>
-                    <br>
-                    <br>
-                    <a href="problema08.html">Problema 8</a>
+                    <div>
+                        <button class="btn btn--1">
+                             <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+                         </button>
+                        <br>
+                        <br>
+                        <button class="btn btn--2">
+                            <a href="./problema08.html" style="text-decoration: none; color: rgb(255, 255, 255);">Problema 8</a>
+                         </button>
+                         </div>
+                     </div>
+                    
                     
 </body>
 </html>
