--- a/problema09.html
+++ b/problema09.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
     src="./js/problema09.js"></script>
+    <link rel="stylesheet" href="./css/problema09.css">
 </head>
-<body>
+</head>
+<body style="color: white;">
     <p>
         Determinar la cantidad de dinero que recibira un trabajador por concepto de las horas extras
         trabajadas en una empresa sabiendo que cuando las horas de trabajo exceden de 40 ,el resto se 
@@ -38,10 +40,17 @@
                         id="igu" readonly="readonly" 
                         class="input_text"> </td>
                 </tr>
-                <a href="index.html">Regresar al Menu Principal </a>
+                <div>
+                    <button class="btn btn--1">
+                         <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+                     </button>
                     <br>
                     <br>
-                    <a href="problema10.html">Problema 10</a>
+                    <button class="btn btn--2">
+                        <a href="./problema10.html" style="text-decoration: none; color: rgb(255, 255, 255);">Problema 10</a>
+                     </button>
+                     </div>
+                 </div>
                 
 </body>
 </html>
