--- a/problema02.html
+++ b/problema02.html
@@ -8,8 +8,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
       src="./js/problema02.js"></script>
+    <link rel="stylesheet" href="./css/problema02.css"
 </head>
-<body>
+<body style="color: white;">
     <p>
       Un vendedor recibe un sueldo base mas un 10% extra por comision de sus ventas el 
       vendedor desea saber cuanto dinero obtendra por concepto de comisiones pro las tres ventasd
@@ -57,11 +58,17 @@
         </table>
     </form>
     <br>
-    <a href="index.html">Regresar al Formulario Principal </a>
-    <br>
-    <br>
-    <a href="problema03.html">Problema 3</a>
-    
+    <div>
+        <button class="btn btn--1">
+             <a href="index.html" style="text-decoration: none; color: rgb(245, 243, 243);" >Regresar al Menu Principal </a>
+         </button>
+        <br>
+        <br>
+        <button class="btn btn--2">
+            <a href="problema03.html" style="text-decoration: none; color: rgb(250, 250, 250);">Problema 3</a>
+         </button>
+         </div>
+     </div>
 </body>
 </html>
 
