--- a/problema03.html
+++ b/problema03.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
       src="./js/problema03.js"></script>
+      <link rel="stylesheet" href="./css/problema03.css"
 </head>
-<body>
+<body style="color: white;">
     <p>
         Una tienda ofrece un descuento del 15% sobre el total de la compra y un cliente
         desea saber cuanto debera pafar finalmente por su compra
@@ -36,10 +37,18 @@
                     <td class="td_down"> <input type="button" name="borrard" 
                         value="Borrar" onclick="borrar()"> </td>
                 </tr>
-        <a href="index.html">Regresar al Formulario Principal </a>
-        <br>
-        <br>
-        <a href="problema04.html">Problema 4</a>
+                <div>
+                    <button class="btn btn--1">
+                         <a href="index.html" style="text-decoration: none; color: rgb(245, 243, 243);" >Regresar al Menu Principal </a>
+                     </button>
+                    <br>
+                    <br>
+                    <button class="btn btn--2">
+                        <a href="problema04.html" style="text-decoration: none; color: rgb(250, 250, 250);">Problema 4</a>
+                     </button>
+                     </div>
+                 </div>
+        
                 
 </body>
 </html>
