--- a/problema08.html
+++ b/problema08.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
     src="./js/problema08.js"></script>
+    <link rel="stylesheet" href="./css/problema08.css">
 </head>
-<body>
+<body style="color: white;">
     <p>
         Leer tres numeros diferentes e imprimir el numero mayor de los tres
     </p>
@@ -41,9 +42,17 @@
                             id="igu" readonly="readonly" 
                             class="input_text"> </td>
                     </tr>
-                    <a href="index.html">Regresar al Menu Principal </a>
-                    <br>
-                    <br>
-                    <a href="problema09.html">Problema 9</a>
+                    <div>
+                        <button class="btn btn--1">
+                             <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+                         </button>
+                        <br>
+                        <br>
+                        <button class="btn btn--2">
+                            <a href="./problema09.html" style="text-decoration: none; color: rgb(255, 255, 255);">Problema 9</a>
+                         </button>
+                         </div>
+                     </div>
+                    
 </body>
 </html>
