--- a/problema1.html
+++ b/problema1.html
@@ -7,8 +7,10 @@
     <title>Problema 1</title>
     <link rel="stylesheet" href="./CSS/problema.css">
     <script src="./JS/problema01.js" ></script>
+    <link rel="stylesheet" href="./css/problema01.css">
 </head>
-<body>
+<body style="color: rgb(238, 241, 245);">
+<div class="contenidos">
 
     <p>
         Se desea programar un formulario el cual sea capaz 
@@ -42,11 +44,20 @@
             </tr>
         </table>
     </form>
+    </div>
     <br>
-    <a href="index.html">Regresar al Menu Principal </a>
-    <br>
-    <br>
-    <a href="problema02.html">Problema 2</a>
-    
+    <div class="botones" style="color: rgb(42, 60, 94);">
+        <div>
+       <button class="btn btn--1">
+            <a href="index.html" style="text-decoration: none; color: rgb(90, 77, 77);" >Regresar al Menu Principal </a>
+        </button>
+       <br>
+       <br>
+       <button class="btn btn--2">
+           <a href="problema02.html" style="text-decoration: none; color: rgb(88, 64, 64);">Problema 2</a>
+        </button>
+        </div>
+    </div>
+</div>    
 </body>
 </html>
