--- a/problema10.html
+++ b/problema10.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <script language="JavaScript" type="text/JavaScript"
     src="./js/problema10.js"></script>
+    <link rel="stylesheet" href="./css/problema10.css">
 </head>
-<body>
+<body style="color: white;">
     <p>
         Calcular la utilidad que un trabajador recibe en el reparto anual de utilidades si este se le asigna 
         como un porcentaje de su salario mensual que depende de su antiguedad en la empresa deacuerdo con la sig Tabla
@@ -53,5 +54,14 @@
                     <td class="td_down"> <input type="text" name="xd"
                         id="igu" readonly="readonly" 
                         class="input_text"> </td>
+                 
+                    <br>
+                    <br>
+                    <div>
+                        <button class="btn btn--1">
+                             <a href="index.html" style="text-decoration: none; color: rgb(226, 218, 218);" >Regresar al Menu Principal </a>
+                         </button>
+                        <br>
+                        <br>
 </body>
 </html>
