--- a/problema1.html
+++ b/problema1.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problema 1</title>
-    <script src="./JS/problema01.js" ></script>
+    <script language="JavaScript" type="text/JavaScript"
+    src="./js/problema01.js"></script>
     <link rel="stylesheet" href="./css/problema01.css">
 </head>
 <body style="color: rgb(238, 241, 245);">
