--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul>
            <b> <li ><a href="menu.html"style="color:black; size: 70px;">Curriculum</a></li></b>
            <b><li  ><a href="hobbies.html"style="color: black; size: 7px;">Hobbies</a></li></b>
+           <b><li  ><a href="algoritmia.html"style="color: black; size: 7px;">Problemas de Js</a></li></b>
           <div class="menusito">
            <nav>
             
@@ -32,6 +33,7 @@
                     <li><a href="problema08.html">8</a></li>
                     <li><a href="problema09.html">9</a></li>
                     <li><a href="problema10.html">10</a></li>
+                    <LI><a href="algoritmia.html"></a></li>
                 </ul>
             </li>
                 </nav>
