--- a/algoritmia.html
+++ b/algoritmia.html
@@ -175,7 +175,8 @@
         </div>
     </div>
     
-    <script src="./JS/algoritmiajs.js" ></script>
+    <script language="JavaScript" type="text/JavaScript"
+      src="./js/algoritmiajs.js"></script>
 
     
 </body>
